--- a/xhh/src/styles/globals.css
+++ b/xhh/src/styles/globals.css
@@ -12,6 +12,18 @@
  
  }
 
+ @layer base {
+    input[type="number"]::-webkit-inner-spin-button,
+    input[type="number"]::-webkit-outer-spin-button {
+      -webkit-appearance: none;
+      margin: 0;
+    }
+
+    input[type=number] {
+        -moz-appearance: textfield;
+    }
+}
+
  .fade-in {
     @apply opacity-100 translate-x-0 transition-all duration-1000
  }
